# ImageToolQML

./: .gitignore  CMakeLists.txt  ImageToolConfig.cmake  qmldir
install/qmllib/include/: ImageToolQML.hpp  ImageToolQML_global.h
install/widgetsproxy/: ImageToolQMLConfig.cmake
qmllib/: CMakeLists.txt
qmllib/include/: ImageToolQML.hpp  PaintData.hpp
qmllib/install/include/: ImageToolQML.hpp  PaintData.hpp
qmllib/src/: ImageToolQML.cpp  PaintData.cpp
widgetsproxy/: CMakeLists.txt
widgetsproxy/include/: ImageTool.hpp
widgetsproxy/resource/: ImageTool.qrc  plugin.qml
widgetsproxy/src/: ImageTool.cpp
